--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="serif-monospace"
-        android:text="Some Text"
+        android:text="Beauty"
         android:textAlignment="center"
         android:textColor="#121111"
         android:textSize="24sp"
