--- a/app/src/main/res/layout/image_item_view.xml
+++ b/app/src/main/res/layout/image_item_view.xml
@@ -5,6 +5,7 @@
     android:id="@+id/movie_item_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:foreground="?attr/selectableItemBackground"
     android:orientation="vertical">
 
     <TextView
